# DevEdge-IoTDevKit-Sony-cxd5605

./: CMakeLists.txt  Kconfig  LIMITED_LICENSE_AGREEMENT  LIMITED_LICENSE_AGREEMENT.md
include/: cxd5605_lib.h
src/: dt_ent.c
zephyr/: module.yml
